// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtistArea snapshots should match the correct snapshot 1`] = `
<div
  class="artist-area"
>
  <Connect(Card)
    artist={
      Object {
        "favorited": false,
        "id": "1234",
        "name": "test",
        "wiki": "asfas",
      }
    }
    key="af065c"
  />
</div>
`;

exports[`ArtistArea snapshots should match the correct snapshot 2`] = `
<div
  class="artist-area"
>
  <Connect(Card)
    artist={
      Object {
        "favorited": false,
        "id": "33",
        "name": "test",
        "wiki": "asfas",
      }
    }
    key="b0afe4"
  />
</div>
`;

exports[`ArtistArea snapshots should match the correct snapshot 3`] = `
<div
  class="artist-area"
>
  <Connect(Card)
    artist={
      Object {
        "favorited": false,
        "id": "44",
        "name": "test",
        "wiki": "asfas",
      }
    }
    key="f0cfe1"
  />
</div>
`;

exports[`ArtistArea snapshots should match the correct snapshot 4`] = `
<div
  class="artist-area"
>
  <Connect(Card)
    artist={
      Object {
        "favorited": false,
        "id": "22",
        "name": "test",
        "wiki": "asfas",
      }
    }
    key="db2b31"
  />
</div>
`;

exports[`ArtistArea snapshots should match the correct snapshot 5`] = `
<div
  class="artist-area"
>
  <Connect(Card)
    artist="1234"
    key="e3dea6"
  />
</div>
`;
